# CRP2

./: CMakeLists.txt  README.md  build.sh  requirements.txt
doc/: log_guide.txt  score
lookupTable/: perm2.txt  perm3.txt
lookupTable/illegal_placement_boxs/: ispd18_test2.illegal.txt  ispd19_test10.illegal.txt  ispd19_test2.illegal.txt  ispd19_test3.illegal.txt  ispd19_test4.illegal.txt  ispd19_test5.illegal.txt  ispd19_test6.illegal.txt  ispd19_test7.illegal.txt  ispd19_test8.illegal.txt  ispd19_test9.illegal.txt
lookupTable/info/: ispd19_test1.txt
python/: main.py
python/analysis_results/: main.py  movements.ipynb
python/backend/: animation.py  astar.py  cell.py  coef.py  congestionEdge.py  db.py  drc.py  fixedMetals.py  gcell.py  net.py  outofguide.py  param.py  patternroute.py  pltcairo.py  score.py  track.py  utils.py  vio.py
python/score_analysis/: .~lock.ispd18_scores.xlsx#  ispd18_scores.csv  main_score.py  score.ipynb
pythonRL/: main.py  requirements.txt
pythonRL/analysis_results/: movements.ipynb
pythonRL/backend/: animation.py  astar.py  coef.py  db.py  fixedMetals.py  gcell.py  legalizer.py  net.py  pltcairo.py  vio.py
pythonRL/debug_legalizer/: legalizer_assignMovableCellToSites.ipynb
pythonRL/score_analysis/: main_score.py
run/: build.py
scripts/: build.py  copy_to_cadence_server.sh  download_from_cadence_server.sh  make.sh
scripts/img_to_video/: img_to_video.sh
scripts/triton/: make.sh  runTriton.sh  upload_results.sh
src/: CMakeLists.txt  main.cpp
src/db/: Cell.cpp  Cell.h  CutLayer.cpp  Net.cpp  (+10 more)
triton/: CMakeLists.txt
(+72 files in other folders)
